...
        <argument
            android:name="isShowAnotherAccountBtnEnabled"
            android:defaultValue="true"
            app:argType="boolean" />
        <action
            android:id="@+id/action_createOrImportPrivateKeyDuringSetupFragment_to_importPrivateKeysDuringSetupFragment"
            app:destination="@id/importPrivateKeysDuringSetupFragment" />
    </fragment>

    <fragment
        android:id="@+id/importPrivateKeysDuringSetupFragment"
        android:name="com.flowcrypt.email.ui.activity.fragment.ImportPrivateKeysDuringSetupFragment"
        tools:layout="@layout/fragment_import_private_keys_during_setup">
...
