...
    <string name="key_successfully_imported">Key(s) successfully imported</string>
    <string name="the_key_successfully_imported">Key successfully imported</string>
    <string name="attach_file">Attach file</string>
    <string name="switch_to_standard_email">Switch to standard email</string>
    <string name="switch_to_secure_email">Switch to secure email</string>
    <string name="this_message_will_not_be_encrypted">This message will not be encrypted</string>
    <string name="import_their_public_key">Import their Public Key</string>
    <string name="copy_from_other_contact">Copy from other contact</string>
    <string name="template_remove_recipient">Remove %1$s</string>
    <string name="protect_with_password">Protect with password</string>
    <string name="recipient_does_not_use_pgp">Recipient doesn\'t use PGP</string>
    <string name="reply">Reply</string>
    <string name="import_public_key">Import Public Key</string>
...
    <string name="selection_text">Selected: %1$d</string>
    <string name="marked_for_archiving">Marked for archiving</string>
    <string name="undo">Undo</string>
    <string name="network_error">Network error</string>
    <string name="error_no_keys">Error: no keys</string>
    <string name="could_not_load_private_keys">Couldn\'t load private keys</string>
    <string name="partially_encrypted_private_key_error_msg">Some of the provided Private Keys is a partially encrypted private key (some packets are encrypted, some not). Such keys are not supported and will be skipped. Please only import fully encrypted keys, with the same pass phrase for all secret packets.</string>
    <string name="file_is_too_big">The file is too big</string>
    <string name="source_is_empty_or_not_available">The source is empty or not available</string>
    <string name="parsing_keys_please_wait">Parsing keys, please wait</string>
    <string name="empty_pass_phrase">Empty pass phrase</string>
    <string name="keys_have_different_pass_phrase">The keys have different pass phrase</string>
    <string name="pub_key_for_saving_not_found">Public key for saving is not found</string>
...
