...
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <Button
            android:id="@+id/buttonImportMyKey"
            style="@style/AppWidget.Button.Big"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_between_buttons"
            android:text="@string/import_my_key"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
...
