...
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sing_in_graph"
    app:startDestination="@id/mainSignInFragment">

    <fragment
        android:id="@+id/mainSignInFragment"
        android:name="com.flowcrypt.email.ui.activity.fragment.MainSignInFragment"
        android:label="MainSignInFragment"
        tools:layout="@layout/fragment_main_sign_in">
...
