...
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/ScreenHeading"
        android:layout_width="0dp"
        android:text="@string/import_private_key"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
...

    <Button
        android:id="@+id/buttonLoadFromClipboard"
        style="@style/AppWidget.Button.Big"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/margin_between_buttons"
        android:text="@string/load_from_clipboard"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoadFromFile" />

    <androidx.constraintlayout.widget.Guideline
...
